# SK-Bot

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
src/plugins/: repeater.py
src/plugins/nonebot_plugin_rua/: __init__.py
