[tool.poetry]
name = "SK-Bot"
version = "0.1.0"
description = "一些乱七八糟的NoneBot2插件"
authors = ["SK-415 <2967923486@qq.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
nb-cli = "^0.6.4"
haruka-bot = "^1.3.3-alpha.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
